changed branch from master to main

--- a/.github/workflows/issues-to-roadmap.yml
+++ b/.github/workflows/issues-to-roadmap.yml
@@ -16,7 +16,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          ref: master
+          ref: main
           token: ${{ secrets.PAT_TOKEN }}
           
       - name: Update ROADMAP.md from Issues
